# age_from_brain_image_data

./: pyproject.toml
.devcontainer/: devcontainer.json
src/age_from_brain_image_data/: main.ipynb
